# telegram-inline-quotations-bot

./: .gitignore  Cargo.toml  LICENSE  README.md  quotations.txt
src/: lib.rs  main.rs
