[package]
name = "telegram_inline_quotations_bot"
version = "1.0.0"
authors = ["bavbeerhall <bavbeerhall@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
teloxide = "0.3"
teloxide-macros = "0.3"
tokio = { version = "0.2.11", features = ["rt-threaded", "macros"] }
log = { version = "0.4", features = ["std", "serde"] }
log4rs = { version = "^0.13.0", features = ["console_appender", "file_appender", "background_rotation"] }
clap = "2.33.3"
futures = "0.3.8"